--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,11 @@
 			<artifactId>httpcore</artifactId>
 			<version>4.4.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.11</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -48,9 +49,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.16</version>
 				<configuration>
-					<includes>
-						<include>**/*.java</include>
-					</includes>
+					<suiteXmlFiles>
+						<!-- TestNG suite XML files -->
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
