--- a/pom.xml
+++ b/pom.xml
@@ -34,14 +34,14 @@
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-		<testSourceDirectory>src/com/axatrikx/test</testSourceDirectory>
+		<!-- <testSourceDirectory>src/com/axatrikx/test</testSourceDirectory> -->
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
